<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mitechlt.tvportal.play.activities.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:checked="true"
                    android:icon="@null"
                    android:id="@+id/sort_default"
                    android:title="@string/sort_default" />
                <item

                    android:icon="@null"
                    android:id="@+id/sort_movies_az"
                    android:title="@string/movies_az" />
                <item
                    android:icon="@null"
                    android:id="@+id/sort_tvshows_az"
                    android:title="@string/tv_shows_az" />
            </group>
        </menu>
    </item>

</menu>