<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="16dp"
    android:padding="4dp">

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/cast_purchase"
        android:textSize="@dimen/text_size_small"/>

    <com.devspark.robototextview.widget.RobotoButton
        android:id="@+id/button1"
        android:layout_width="88dp"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#33b5e5"
        android:text="@string/button_play_store"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:typeface="roboto_light" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/cast_price"
        android:textColor="#33b5e5"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:typeface="roboto_regular" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/cast"
        android:textSize="@dimen/text_size_small"
        app:typeface="roboto_regular" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/logo_play_purchase_flow_gray_light"/>

</RelativeLayout>

